tests/ui/mismatched_types/array-len-is-closure.stderr
error[E0308]: mismatched types
  --> $DIR/array-len-is-closure.rs:4:9
   |
LL |     [1; || {}];
   |         ^^^^^ expected `usize`, found closure
   |
   = note: expected type `usize`
           found closure `{closure@$DIR/array-len-is-closure.rs:4:9: 4:11}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
